fix modal not showing error

--- a/src/bg.scss
+++ b/src/bg.scss
@@ -17,7 +17,7 @@ $white: #9b97973a;
 	}
 }
 
-body {
+.asdf {
 	position: relative;
 	background: #000;
 
